corrected spacing in project pages

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -92,9 +92,7 @@
 
   .gutter-article,
   .gutter-article-cta .cta {
-    padding-left: 10vw;
-    padding-right: 10vw;
-    max-width: 1100px;
+    max-width: 900px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -609,7 +607,7 @@ button,
   width: min(100%, 480px);
 }
 
-.cta-slot.gutter-actions .cta {
+.cta-slot.gutter-actions-cta .cta {
   width: 480px;
 }
 
@@ -623,7 +621,7 @@ button,
 @media (min-width: 1024px) {
   .container-chapeau,
   .container-actions,
-  .cta-slot.gutter-actions .cta {
+  .cta-slot.gutter-actions-cta .cta {
     width: 100%;
   }
 }
